# facialrecognition

./: .gitignore  CMakeLists.txt  README.md
dataset/: .gitignore  download.sh
include/: hog.hpp  main.hpp  test.hpp
output/: HOG_openCV.txt
py_analysis/: environment.yml  readme.md
py_analysis/data/: HOG_myImpl.txt  pyHOG_opencv.txt
py_analysis/scripts/: Constants.py  dataTests.py  pyHog.py
src/: hog.cpp  main.cpp  test.cpp
